catblob2 update mapDesigner and map generation algorithm

--- a/mapDesigner/index.html
+++ b/mapDesigner/index.html
@@ -37,6 +37,10 @@
       <label>edit key</label>
       <input class="edit_key input" value="" />
     </div>
+    <div class="input_wrap">
+      <label>tile name</label>
+      <input class="tile_name input" value="" />
+    </div>
 
 
       <!-- <button class="btn create_grid create icon alt" data-index="0" data-grid_class="cell" data-alt="create grid"></button>  -->
