--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
     </div>  
   </div>
 
-  <div class="control">
+  <!-- <div class="control">
     <button class="arrow" data-dir="up"></button>
     <button class="arrow" data-dir="right"></button>
     <button class="arrow" data-dir="down"></button>
     <button class="arrow" data-dir="left"></button>
+  </div> -->
+
+  <div class="control-wrapper">
+    <div class="control"></div>
   </div>
 
 
