--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 <body>
   <div class="indicator"></div>
 
-  <div class="life-indicator">
-    <div class="life"></div>
+  <div class="status">
+    <div class="life-indicator">
+      <div class="life"></div>
+    </div>
+
+    <div class="catch-indicator">
+    </div>
   </div>
+
 
   <div class="wrapper overflow-hidden flex-center">
     <div class="map-cover overflow-hidden">
