update styling and add random map

--- a/index.html
+++ b/index.html
@@ -19,17 +19,24 @@
     <div class="life-indicator">
       <div class="life"></div>
     </div>
-
     <div class="catch-indicator">
+      <label class="mouseblob catch-label"></label>
+      <span>
+        x
+      </span>
+      <div class="catch-no no">
+      </div>
     </div>
 
-    <div class="time-indicator">
-      90
-    </div>
+
+<div class="time-indicator no">
+  90
+</div>
+
 
     <!-- <button class="restart">restart</button> -->
-    <button class="display">display</button>
   </div>
+  <button class="display">display</button>
 
   <div class="overlay wrapper flex-center">
     <div class="message-window flex-center">
