--- a/mapDesigner/index.html
+++ b/mapDesigner/index.html
@@ -69,6 +69,7 @@
     <button class="btn make_map_into_bg alt icon" data-alt="make map into bg"></button>
     <button class="btn switch_palette alt" data-alt="switch palette">switch palettte</button>
     <button class="btn toggle_walls alt" data-alt="switch palette">toggle walls</button>
+    <button class="btn create_random_module alt" data-alt="switch palette">create random module</button>
   </nav>
 
   <div class="pagewrap">
