--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 
   <div class="overlay wrapper flex-center">
     <div class="message-window flex-center">
-      <div class="message">catblob 2</div>
-      <button class="start">start</button>
+      <div class="message">
+        <h1 class="title">catblob 2</h1>
+      </div>
+      <button class="start"><span>start</span></button>
     </div>
   </div>
   <div class="main wrapper overflow-hidden flex-center">
