--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <div class="map-image-wrapper">
         <canvas class="map-image"></canvas>
       </div>
-      <div class="player attacking vertical sprite-container">
+      <div class="player sprite-container">
         <div class="overflow-hidden">
-          <div class="dogblob sprite"></div>
+          <div class="catblob sprite"></div>
         </div>
       </div>
     </div>  
