--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 
   <div class="status">
     <div class="life-indicator">
-      <div class="life"></div>
-    </div>
+      <div class="life-marker"></div>
+      <div class="life-marker"></div>
+      <div class="life-marker"></div>
+      <div class="life-marker"></div>
+    </div>  
     <div class="catch-indicator">
       <label class="mouseblob catch-label"></label>
       <span>
@@ -28,14 +31,12 @@
       </div>
     </div>
 
-
-<div class="time-indicator no">
-  90
-</div>
-
-
+    <div class="time-indicator no">
+      90
+    </div>
     <!-- <button class="restart">restart</button> -->
   </div>
+
   <button class="display">display</button>
 
   <div class="overlay wrapper flex-center">
