--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
       <div class="message">
         <h1 class="title">catblob 2</h1>
       </div>
-      <button class="start"><span>start</span></button>
+      <div class="rules">
+        <p>Catch all mouseblobs while avoiding dogblobs.</p>
+        <p>Move around with arrow keys or the onscreen control UI.</p>
+        <p>Create and destroy pink blocks by clicking or touching map.</p>
+        <button class="start">start</button>
+      </div>
+ 
     </div>
   </div>
   <div class="main wrapper overflow-hidden flex-center">
