--- a/index.html
+++ b/index.html
@@ -36,21 +36,18 @@
     </div>
   </div>
 
-  <button class="display d-none">display</button>
-
   <div class="overlay wrapper flex-center overflow-hidden">
     <div class="cursor d-none"></div>
     <div class="message-window flex-center">
       <div class="message">
         <h1 class="title">catblob 2</h1>
       </div>
-      <div class="rules">
+      <div class="how-to-play">
         <p>Catch all mouseblobs while avoiding dogblobs.</p>
         <p>Move around with arrow keys or the onscreen control UI.</p>
         <p>Create and destroy pink blocks by clicking or touching map.</p>
-        <button class="start">start</button>
       </div>
- 
+      <button class="start">start</button>
     </div>
   </div>
   <div class="main wrapper overflow-hidden flex-center">
