adjust difficulty, tweak rules text and styling

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <h1 class="title">catblob 2</h1>
       </div>
       <div class="how-to-play">
-        <p>Catch all mouseblobs while avoiding dogblobs.</p>
-        <p>Move around with arrow keys or the onscreen control UI.</p>
-        <p>Create and destroy pink blocks by clicking or touching map.</p>
+        <p>Catch all mouseblobs within the time limit, while avoiding dogblobs.</p>
+        <p>Move around with the arrow keys or the onscreen control UI.</p>
+        <p>Create/destroy pink blocks by clicking or touching map.</p>
       </div>
       <button class="start">start</button>
     </div>
